# maudesignal

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml
docs/: 00_master_plan.md  00_pilot_findings.md  00_pilot_findings_v2.md  00_pilot_findings_v3.md  01_vision_mission.md  02_project_charter.md  03_requirements_spec.md  04_skills_matrix.md  05_architecture.md  06_risk_register.md  07_roadmap.md  08_glossary.md  README.md
scripts/: _rename_to_maudesignal.py  check_env.py
skills/ai-failure-mode-classifier/: SKILL.md
skills/ai-failure-mode-classifier/examples/: bad.jsonl  good.jsonl
skills/ai-failure-mode-classifier/schemas/: output.schema.json
skills/drift-analysis-interpreter/: SKILL.md
skills/drift-analysis-interpreter/examples/: bad.jsonl  good.jsonl
skills/drift-analysis-interpreter/schemas/: output.schema.json
skills/maude-narrative-extractor/: SKILL.md
skills/maude-narrative-extractor/examples/: bad.jsonl  good.jsonl
skills/maude-narrative-extractor/schemas/: output.schema.json
skills/psur-report-drafter/: SKILL.md
skills/psur-report-drafter/examples/: bad.jsonl  good.jsonl
skills/psur-report-drafter/schemas/: output.schema.json
skills/regulatory-citation-verifier/: SKILL.md
skills/regulatory-citation-verifier/examples/: bad.jsonl  good.jsonl
skills/regulatory-citation-verifier/schemas/: output.schema.json
skills/root-cause-analyzer/: SKILL.md
skills/root-cause-analyzer/examples/: bad.jsonl  good.jsonl
skills/root-cause-analyzer/schemas/: output.schema.json
skills/severity-triage/: SKILL.md
skills/severity-triage/examples/: bad.jsonl  good.jsonl
skills/severity-triage/schemas/: output.schema.json
skills/trend-interpreter/: SKILL.md
skills/trend-interpreter/examples/: bad.jsonl  good.jsonl
skills/trend-interpreter/schemas/: output.schema.json
src/maudesignal/: __init__.py  cli.py  config.py
src/maudesignal/alerting/: __init__.py  checker.py  rules.py
src/maudesignal/alerting/notifiers/: __init__.py  base.py  console.py  email_notifier.py  slack.py
src/maudesignal/analysis/: __init__.py  root_cause.py
src/maudesignal/catalog/: __init__.py  fetcher.py
src/maudesignal/common/: __init__.py  exceptions.py  logging.py
src/maudesignal/dashboard/: __init__.py  app.py
src/maudesignal/drift/: __init__.py  calculator.py  interpreter.py
src/maudesignal/extraction/: __init__.py  extractor.py  pipeline.py  skill_loader.py
src/maudesignal/extraction/llm_providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  openai_provider.py  provider_pool.py
src/maudesignal/forecasting/: __init__.py  trend_detector.py
src/maudesignal/ingestion/: __init__.py  openfda_client.py  pipeline.py
src/maudesignal/report/: __init__.py  generator.py  psur_generator.py
src/maudesignal/sources/: __init__.py  clinicaltrials.py  pubmed.py
src/maudesignal/storage/: __init__.py  database.py  models.py
src/safesignal/: __init__.py  cli.py  config.py
src/safesignal/common/: __init__.py  exceptions.py  logging.py
src/safesignal/extraction/: __init__.py  extractor.py  skill_loader.py
src/safesignal/extraction/llm_providers/: __init__.py  anthropic_provider.py  gemini_provider.py  groq_provider.py  openai_provider.py
src/safesignal/ingestion/: __init__.py  openfda_client.py  pipeline.py
src/safesignal/storage/: __init__.py  database.py  models.py
tests/unit/: test_alerting.py  test_catalog_fetcher.py  test_cli.py  test_dashboard.py  test_drift_calculator.py  test_drift_interpreter.py  test_extraction_pipeline.py  test_forecasting.py  test_gemini_provider.py  test_gold_set.py  test_ingestion_pipeline.py  test_llm_providers.py  test_openfda_client.py  test_provider_pool.py  test_psur.py  test_report_generator.py  test_skill_loader.py  test_sources.py  test_storage.py
