[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==========================================
# Project metadata
# ==========================================
[project]
name = "maudesignal"
version = "0.1.0"
description = "Open-source AI postmarket surveillance toolkit for FDA-cleared AI/ML medical devices"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sai Charan Kondapally", email = "kondapallysaicharan63@gmail.com"}
]
requires-python = ">=3.11"
keywords = ["fda", "medical-devices", "maude", "ai-safety", "postmarket-surveillance", "regulatory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# ==========================================
# Runtime dependencies (pinned per NFR-15)
# ==========================================
dependencies = [
    # LLM providers (install at least one; config selects which to use)
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "groq>=0.11.0",
    "google-genai>=0.3.0",

    # HTTP + APIs
    "httpx>=0.27.0",
    "tenacity>=8.2.0",           # retry logic (FR-04)

    # Data
    "pandas>=2.2.0",
    "pydantic>=2.6.0",           # schema validation (DR-03, DR-04, DR-05)
    "sqlalchemy>=2.0.0",         # storage layer (Doc 5 §5)

    # Statistics & drift
    "scipy>=1.12.0",             # KS test (FR-19)
    "numpy>=1.26.0",
    "evidently>=0.4.22",         # drift detection (FR-19)

    # Dashboard & CLI
    "streamlit>=1.32.0",         # F6 dashboard
    "typer>=0.12.0",             # CLI (NFR-09)
    "rich>=13.7.0",              # pretty CLI output

    # Reports
    "jinja2>=3.1.0",             # Markdown templating for PSUR (F7)
    "weasyprint>=61.0",          # Markdown/HTML to PDF (FR-30)

    # Logging
    "structlog>=24.1.0",         # structured JSON logs (NFR-08)

    # Config
    "python-dotenv>=1.0.0",      # .env loading (NFR-07)
]

# ==========================================
# Dev dependencies
# ==========================================
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "black>=24.3.0",
    "pre-commit>=3.6.0",
]

# ==========================================
# CLI entry points (Doc 5 §6 folder structure)
# ==========================================
[project.scripts]
maudesignal = "maudesignal.cli:app"

# ==========================================
# Package discovery
# ==========================================
[tool.hatch.build.targets.wheel]
packages = ["src/maudesignal"]

# ==========================================
# mypy (NFR-11)
# ==========================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "evidently.*",
    "weasyprint.*",
]
ignore_missing_imports = true

# ==========================================
# ruff (NFR-12)
# ==========================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle (NFR-17)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "T20",  # flake8-print (warn on print statements; use logger)
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "D100",  # Missing docstring in public module (too noisy)
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101"]  # No docstrings required in tests; assert is fine

[tool.ruff.lint.pydocstyle]
convention = "google"  # NFR-17 requires Google-style

# ==========================================
# black
# ==========================================
[tool.black]
line-length = 100
target-version = ["py311"]

# ==========================================
# pytest (NFR-13)
# ==========================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/maudesignal",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: integration tests (may require API keys)",
    "slow: slow tests (>5 seconds)",
    "gold_set: tests that run against the hand-labeled gold standard",
]

# ==========================================
# coverage (NFR-13)
# ==========================================
[tool.coverage.run]
source = ["src/maudesignal"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
